core/Examples/Errors/error2.k
<type> structure <is> {'a toto, 'b structure};
